// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useSlots sample code test suite renders sample 1 - the two types of basic bold text components 1`] = `
<View>
  <Text
    style={
      {
        "color": "black",
        "fontWeight": 900,
      }
    }
  >
    Staged component at one level
  </Text>
  <Text
    style={
      {
        "color": "black",
        "fontWeight": 900,
      }
    }
  >
    Standard component of a single level
  </Text>
</View>
`;

exports[`useSlots sample code test suite renders sample 2 = the two types of two level header components 1`] = `
<div>
  <Text
    style={
      {
        "color": "black",
        "fontSize": 20,
        "fontWeight": 900,
      }
    }
  >
    Staged component with two levels
  </Text>
  <Text
    style={
      {
        "color": "black",
        "fontSize": 20,
        "fontWeight": 900,
      }
    }
  >
    Standard component with two levels
  </Text>
</div>
`;

exports[`useSlots sample code test suite renders sample 3 - the two types of higher order header components 1`] = `
<div>
  <span>
    --- SIMPLE USAGE COMPARISON ---
  </span>
  <View
    style={
      {
        "backgroundColor": "gray",
        "borderColor": "purple",
        "borderWidth": 1,
        "display": "flex",
        "flexDirection": "column",
      }
    }
  >
    <Text
      style={
        {
          "fontSize": 20,
          "fontWeight": 900,
        }
      }
    >
      Standard HOC
    </Text>
  </View>
  <View
    style={
      {
        "backgroundColor": "gray",
        "borderColor": "purple",
        "borderWidth": 1,
        "display": "flex",
        "flexDirection": "column",
      }
    }
  >
    <Text
      style={
        {
          "fontSize": 20,
          "fontWeight": 900,
        }
      }
    >
      Staged HOC
    </Text>
  </View>
  <span>
    --- COMPARISON WITH CAPTIONS ---
  </span>
  <View
    style={
      {
        "backgroundColor": "gray",
        "borderColor": "purple",
        "borderWidth": 1,
        "display": "flex",
        "flexDirection": "column",
      }
    }
  >
    <Text
      style={
        {
          "fontSize": 20,
          "fontWeight": 900,
        }
      }
    >
      Standard HOC with Caption
    </Text>
    <Text
      style={
        {
          "fontWeight": 900,
        }
      }
    >
      Caption text
    </Text>
  </View>
  <View
    style={
      {
        "backgroundColor": "gray",
        "borderColor": "purple",
        "borderWidth": 1,
        "display": "flex",
        "flexDirection": "column",
      }
    }
  >
    <Text
      style={
        {
          "fontSize": 20,
          "fontWeight": 900,
        }
      }
    >
      Staged HOC with Caption
    </Text>
    <Text
      style={
        {
          "fontWeight": 900,
        }
      }
    >
      Caption text
    </Text>
  </View>
  <span>
    --- COMPARISON WITH CAPTIONS AND CUSTOMIZATIONS ---
  </span>
  <View
    style={
      {
        "backgroundColor": "gray",
        "borderColor": "purple",
        "borderWidth": 1,
        "display": "flex",
        "flexDirection": "column",
      }
    }
  >
    <Text
      style={
        {
          "color": "red",
          "fontSize": 20,
          "fontWeight": 900,
        }
      }
    >
      Standard HOC with caption and customizations
    </Text>
    <Text
      style={
        {
          "color": "yellow",
          "fontWeight": 900,
        }
      }
    >
      Caption text
    </Text>
  </View>
  <View
    style={
      {
        "backgroundColor": "gray",
        "borderColor": "purple",
        "borderWidth": 1,
        "display": "flex",
        "flexDirection": "column",
      }
    }
  >
    <Text
      style={
        {
          "color": "red",
          "fontSize": 20,
          "fontWeight": 900,
        }
      }
    >
      Staged HOC with caption and customizations
    </Text>
    <Text
      style={
        {
          "color": "yellow",
          "fontWeight": 900,
        }
      }
    >
      Caption text
    </Text>
  </View>
</div>
`;
